# khaalisplit

./: .gitignore  .gitmodules  LICENSE  PRD.md  README.md  arc.md  docker-compose.yml  ens.md
.plans/: application-01.md  (+9 more)
app/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/api/: admin.py  urls.py
app/api/forms/: auth.py  expenses.py  groups.py
app/api/migrations/: 0001_initial.py
app/api/models/: __init__.py  activity.py  expenses.py  friends.py  groups.py  settlement.py  user.py
app/api/utils/: circle_gateway.py  debt_simplifier.py  ens_codec.py  ens_signer.py  hasura_client.py  web3_utils.py
app/api/views/: activity.py  auth.py  ens_gateway.py  expenses.py  friends.py  groups.py  profile.py  settlement.py
app/config/: context_processors.py  settings.py  urls.py  wsgi.py
app/m/: urls.py  views.py
app/middleware/: wide_event_logging.py
app/static/css/: tw-in.css  tw.css
app/static/js/: app.js  crypto.js  keystore.js  wallet.js
app/templates/: base.html  base_desktop.html  base_mobile.html
app/templates/activity/: feed.html
app/templates/auth/: login.html  signup.html
app/templates/components/: footer.html  header.html
app/templates/friends/: list.html
app/templates/groups/: create.html  detail.html  list.html
app/templates/lenses/: activity-card.html  expense-card.html  friend-card.html  group-card.html  invite-card.html  settlement-card.html
app/templates/pages/: friends.html  group-create.html  group-detail.html  groups-list.html  home.html  login.html  onboarding-profile.html  onboarding-wallet.html  profile.html  settle.html  signup.html
app/templates/partials/: activity_list.html  debt_summary.html  expense_form.html  expense_list.html  loading.html  member_list.html  payment_preferences.html  pending_requests.html  search_results.html  toast.html
app/web/: urls.py  views.py
(+121 files in other folders)
